<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">allnet-xchat</string>
    <string name="contacts">Contacts</string>
    <string name="new_contact">New Contact</string>
    <string name="more">More</string>
    <string name="secret">Secret</string>
    <string name="key_exchange" tools:keep="@string/key_exchange">Key Exchange</string>
    <string name="privacy">privacy</string>
    <string name="notifications">notifications</string>
    <string name="save">save</string>
    <string name="user">user</string>
    <string name="name">Name</string>
    <string name="message">Message…</string>
    <string name="value">Value</string>
    <string name="_5">5</string>
    <string name="_save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="visible">Visible</string>
    <string name="_notifications">Notifications</string>
    <string name="save_messages">Save messages</string>
    <string name="manage_participants">Manage participants</string>
    <string name="delete_conversation">Delete conversation</string>
    <string name="_500_mb">500 MB</string>
    <string name="hidden_contacts">Hidden contacts</string>
    <string name="type">Type</string>
    <string name="new_contact_reachable_via_the_internet_or_within_wireless_range_10m_30ft">* new contact reachable via the internet or within wireless range (10m/30ft)</string>
    <string name="request_contact">Request Contact</string>
    <string name="shared_secret">Shared secret:</string>
    <string name="hiffen">-</string>
    <string name="optional_secret">Optional secret:</string>
    <string name="resend_key">Resend key</string>
    <string name="send">Send</string>
    <string name="hops">Hops</string>
    <string name="show_details">Show Details</string>
    <string name="trace">Trace</string>
    <string name="output">Output</string>
    <string name="none">None</string>
    <string name="created_group">Created group with success!</string>
    <string name="key_in_progress">Key exchange in progress</string>
    <string name="waiting_key">Waiting for key from:</string>
    <string name="not_possible">It was not possible to create the group</string>
    <string name="key_sent">Key was sent</string>
    <string name="key_exchanged">Key was exchanged with SUCCESS!!!</string>
    <string name="delete_group">Delete group</string>
    <string name="manage_groups">Manage groups</string>
    <string name="delete_user">Delete user</string>
    <string name="mb">MB</string>
    <string name="date">date</string>
    <string name="done">Done</string>

    <string-array name="contact_type">
        <item>regular internet contact</item>
        <item>nearby wireless contact</item>
        <item>new group</item>
    </string-array>
</resources>
