<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.alnet.allnet_android.fragments.ContactNewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ededed"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:paddingBottom="8sp"
                android:paddingLeft="4sp"
                android:paddingRight="4sp"
                android:paddingTop="16sp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16sp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:inputType="textEmailAddress"
                android:paddingBottom="8sp"
                android:paddingTop="16sp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textV"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#e8e8e8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ededed"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:paddingBottom="8sp"
                android:paddingLeft="4sp"
                android:paddingRight="4sp"
                android:paddingTop="16sp"
                android:text="@string/secret"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etSecret"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16sp"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:hint="@string/secret"
                android:inputType="textEmailAddress"
                android:paddingBottom="8sp"
                android:paddingTop="16sp"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#e8e8e8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#ededed"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:paddingBottom="8sp"
                android:paddingLeft="4sp"
                android:paddingRight="4sp"
                android:paddingTop="16sp"
                android:text="@string/type"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinnerType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8sp"
                android:layout_marginStart="16sp"
                android:layout_marginTop="16sp"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="#e8e8e8" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/new_contact_reachable_via_the_internet_or_within_wireless_range_10m_30ft"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/buttonRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/request_contact" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvIncompletes"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</ScrollView>
